force-app/main/default/objects/NEPA_Challenge_Prediction_Rule__mdt.object
<CustomObject>
    <description>Rule table mapping process/project attributes to NEPA challenge ground predictions. Each record targets one challenge ground and specifies the conditions that trigger the prediction.</description>
    <label>NEPA Challenge Prediction Rule</label>
    <pluralLabel>NEPA Challenge Prediction Rules</pluralLabel>
    <fields>
        <fullName>Challenge_Ground__c</fullName>
        <description>The NEPA challenge ground this rule predicts (e.g., EIS/EA Inadequacy, Failure to Supplement).</description>
        <label>Challenge Ground</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_Review_Type__c</fullName>
        <description>Review type that activates this rule (EIS, EA, CE, Other Authorization, or blank for any).</description>
        <label>Trigger Review Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_Adjacent_Statute__c</fullName>
        <description>Adjacent statute keyword that activates this rule (e.g., ESA, CWA, NHPA). Blank means not statute-dependent.</description>
        <label>Trigger Adjacent Statute</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Explanation__c</fullName>
        <description>Plain-language explanation written to nepa_challenge_prediction_notes__c when this rule fires.</description>
        <label>Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Sort order for display in predicted challenge grounds list. Lower number = listed first.</description>
        <label>Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <description>Whether this rule is currently active.</description>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>